--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline'"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>APP NAME</title>
-  </head>
-  <body>
-    <h1>MY ELECTRON APP</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>SysTop | Monitor your CPU</title>
+</head>
+
+<body>
+  <h1>Systop</h1>
+</body>
+
 </html>
