--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
 
   <script src="js/tabs.js"></script>
   <script src="js/monitor.js"></script>
+  <script src="js/settings.js"></script>
 </body>
 
 </html>
